--- a/src/pages/CurentTest/ourTest.module.scss
+++ b/src/pages/CurentTest/ourTest.module.scss
@@ -29,13 +29,13 @@
     font-size: 25px;
 }
 
-.question{
+.curQuestion{
     color: darkblue;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
 }
 
-.numberquastion{
+.numberQuastion{
     font-size: 20px;
     font-family:'Courier New', Courier, monospace;
 }
