--- a/src/pages/CurentTest/ourTest.module.scss
+++ b/src/pages/CurentTest/ourTest.module.scss
@@ -1,5 +1,6 @@
 .curent{
     width: 200px;
+    padding-left:40px;
     border-radius: 5px;
     background-color:rgb(197, 143, 248);
     margin-bottom: 40px;
@@ -38,4 +39,7 @@
 .numberQuastion{
     font-size: 20px;
     font-family:'Courier New', Courier, monospace;
+}
+.someVariable{
+    padding-left: 40px;
 }
